2007-06-21  Rodrigo Moya <rodrigo@gnome-db.org>

	* gnome-settings-accessibility-keyboard.c:
	* gnome-settings-keybindings.c:
	* gnome-settings-keyboard.c:
	* gnome-settings-multimedia-keys.c:
	* gnome-settings-xrdb.c:
	* gnome-settings-daemon.c: all modules use now the new arch.

	* gnome-settings-background.c (background_callback): pass the correct
	argument to the idle callback.

2007-06-21  Matthias Clasen <mclasen@redhat.com>

	* gnome-settings-screensaver.c (gnome_settings_module_screensaver_start):
	fix spawning of gnome-screensaver.

2007-06-19  Rodrigo Moya <rodrigo@gnome-db.org>

	* gnome-settings-module.c (gnome_settings_module_start|_stop): return
	TRUE if the module does not implement the method. It's not an error,
	just the module does not need to implement it.

	* gnome-settings-daemon.c (gnome_settings_daemon_init): allocate memory
	for the index in the hash table.

2007-06-18  Rodrigo Moya <rodrigo@gnome-db.org>

	* gnome-settings-typing-break.c: converted to new arch.

	* gnome-settings-daemon.c: use new converted modules.

	* Makefile.am: removed unneeded header files.

	* factory.c (main): call g_thread_init to avoid warnings.

2007-06-18  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am: remove non-existing gnome-settings-xsettings.h

2007-06-15  Jens Granseuer  <jensgr@gmx.net>

	* gnome-settings-screensaver.c:
	(gnome_settings_module_screensaver_start): don't leak the GError

2007-06-11  Bastien Nocera  <hadess@hadess.net>

	* gnome-settings-multimedia-keys.c: (do_action): Force launching
	nautilus in the home directory, rather than relying on it
	opening there (Closes: #356069)

2007-06-06  Rodrigo Moya <rodrigo@gnome-db.org>

	* gnome-settings-default-editor.c:
	* gnome-settings-gtk1theme.c:
	* gnome-settings-mouse.c:
	* gnome-settings-sound.c:
	* gnome-settings-xsettings.c: converted more modules to the new arch.

	* gnome-settings-daemon.c (gnome_settings_daemon_new): now this is much
	cleaner.
